<resources>
    <string name="app_name">SOSReal</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="trocarSenha">Esqueceu sua senha?</string>
    <string name="entrar">Entrar</string>
    <string name="erroLogin">Dados incorretos, tente novamente.</string>
    <string name="novaConta">Crie sua conta</string>
    <string name="confirmarSenha">Confirmar senha</string>
    <string name="email">E-mail</string>
    <string name="proximo">Próximo</string>
    <string name="confirmar">Confirmar</string>
    <string name="erroSenhas">Senhas incompatíveis</string>
    <string name="erroVazio">Dados incompletos</string>
    <string name="explicarEsqueciSenha">Uma nova senha será gerada de forma aleatória e enviada para o seguinte endereço de e-mail:</string>
    <string name="novaDoacao">Nova doação</string>
    <string name="consultarDoacao">Consultar doações</string>
    <string name="novaSenha">Nova senha</string>
    <string name="confirmarNovaSenha">Confirmar nova senha</string>
    <string name="senhaAtual">Senha atual</string>
    <string name="erroEmail">E-mail inválido</string>
    <string name="erroSenhaAntiga">Senha atual inválida</string>
    <string name="erroData">Data inválida</string>
    <string name="nome">Nome</string>
    <string name="dataNasc">Data de nascimento</string>
    <string name="CPF">CPF</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="sexo">Sexo</string>
    <string name="telCont">Telefone de contato</string>
    <string name="telCel">Telefone celular</string>
    <string name="erroCadastro">Ocorreu um erro no cadastro</string>
    <string name="razao">Razão social</string>
    <string name="responsavel">Responsável</string>
    <string name="inscricao">Inscrição</string>
    <string name="tributo">Tributo</string>
    <string name="CNPJ">CNPJ</string>
    <string name="erroCNPJ">CNPJ inválido</string>
    <string name="erroCPF">CPF inválido</string>
    <string name="pf">Física</string>
    <string name="pj">Jurídica</string>
    <string name="selecionarPfPj">Você é uma pessoa</string>
    <string name="descricao">Descrição</string>
    <string name="tel">Telefone</string>
    <string name="infoTribu">Informação tributo</string>
    <string name="doar">Doar</string>

    <string-array name="sexo_array">
        <item>Selecione</item>
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>

    <string-array name="tributo_array">
        <item>Selecione</item>
        <item>Contribuinte</item>
        <item>Não contribuinte</item>
        <item>Isento</item>
    </string-array>

</resources>
