<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pap.com.sosreal.CriarPerfilpj1Activity">

    <TextView
        android:id="@+id/lblRazao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/razao"
        android:textSize="20dp"
        android:layout_below="@id/logo"/>

    <EditText
        android:id="@+id/txtRazao"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/lblRazao"/>

    <TextView
        android:id="@+id/lblResponsavel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/responsavel"
        android:textSize="20dp"
        android:layout_below="@id/txtRazao"/>

    <EditText
        android:id="@+id/txtResponsavel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/lblResponsavel"/>

    <TextView
        android:id="@+id/lblInscricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/inscricao"
        android:textSize="20dp"
        android:layout_below="@id/txtResponsavel"/>

    <EditText
        android:id="@+id/txtInscricao"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:inputType="date"
        android:layout_below="@id/lblInscricao" />

    <TextView
        android:id="@+id/lblTributo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/tributo"
        android:textSize="20dp"
        android:layout_below="@id/txtInscricao"/>

    <Spinner
        android:id="@+id/spinner_tributo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/lblTributo"/>


    <TextView
        android:id="@+id/lblErro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text=""
        android:textColor="@color/colorVermelho"
        android:textSize="18dp"
        android:layout_below="@id/spinner_tributo"/>

    <Button
        android:id="@+id/btnProximo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proximo"
        android:layout_marginTop="5dp"
        android:layout_below="@id/lblErro"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorBranco"
        android:layout_centerInParent="true"
        android:onClick="proximo"/>



</RelativeLayout>
