<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pap.com.sosreal.MainActivity">

    <TextView
        android:id="@+id/lblNovoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/usuario"
        android:textSize="20dp"
        android:layout_below="@id/logo"/>

    <EditText
        android:id="@+id/txtNovoUsuario"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/lblNovoUsuario"/>

    <TextView
        android:id="@+id/lblNovoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/email"
        android:textSize="20dp"
        android:layout_below="@id/txtNovoUsuario"/>

    <EditText
        android:id="@+id/txtNovoEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:inputType="textEmailAddress"
        android:layout_below="@id/lblNovoEmail"/>

    <TextView
        android:id="@+id/lblNovaSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/senha"
        android:textSize="20dp"
        android:layout_below="@id/txtNovoEmail"/>

    <EditText
        android:id="@+id/txtNovaSenha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/lblNovaSenha"
        android:layout_alignParentStart="true"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/lblConfirmarSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/confirmarSenha"
        android:textSize="20dp"
        android:layout_below="@id/txtNovaSenha"/>

    <EditText
        android:id="@+id/txtConfirmarSenha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:layout_below="@+id/lblConfirmarSenha"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/lblErro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text=""
        android:textColor="@color/colorVermelho"
        android:textSize="18dp"
        android:layout_below="@id/txtConfirmarSenha"/>

    <Button
        android:id="@+id/btnProximo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proximo"
        android:layout_marginTop="5dp"
        android:layout_below="@id/lblErro"
        android:background="@color/colorLink"
        android:textColor="@color/colorBranco"
        android:layout_centerInParent="true"
        android:onClick="proximo"/>



</RelativeLayout>
